--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,17 @@
 on: [push, pull_request]
 name: CI
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.20.x, 1.21.x, 1.22.x, 1.23.x, 1.24.x]
+        go-version: [1.21.x, 1.22.x, 1.23.x, 1.24.x]   # 去掉 1.20，因依赖已要求 Go ≥ 1.21
         os: [ubuntu-latest, macos-latest, windows-latest]
+      max-parallel: 3
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     steps:
       - name: Install Go
         uses: actions/setup-go@v5
