--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Test
         run: |
-          go test -v -race ./...
+          go test -v -race ./... -short
           # go vet ./...
           # go test -bench=.
