--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
       max-parallel: 3
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
+    env:
+      GOTOOLCHAIN: local
     steps:
       - name: Install Go
         uses: actions/setup-go@v5
