--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,15 @@
 on: [push, pull_request]
 name: CI
+
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
+
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.21.x, 1.22.x, 1.23.x, 1.24.x]   # 去掉 1.20，因依赖已要求 Go ≥ 1.21
+        go-version: [1.21.x, 1.22.x, 1.23.x, 1.24.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
       max-parallel: 3
     runs-on: ${{ matrix.os }}
@@ -19,10 +21,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Test
-      - run: |
+
+      - name: Run tests
+        run: |
           for pkg in $(go list ./...); do
             echo "===> $pkg"
             go test -v $pkg || exit 1
